Fixed horizontal scroll

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -948,15 +948,16 @@ video {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
+.py-28 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
 .pb-10 {
   padding-bottom: 2.5rem;
-}
-.pb-28 {
-  padding-bottom: 7rem;
 }
 .pb-48 {
   padding-bottom: 12rem;
